# C-Dynamic-Utils

./: CMakeLists.txt  config.sh
include/dynautils/: Allocators.h  Array.h  String.h
src/: Allocators.c  Array.c  String.c
test/: Array_test.c  CMakeLists.txt  String_test.c  main.c
test/smoke_test/: smoke_test.c
